parser/src/parser/expressions/snapshots/test__parser::expressions::field_expr::test::parse_field_access_method_chain.snap
---
created: "2020-05-02T10:11:44.253714Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/field_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK_EXPR@[9; 23)
      BLOCK@[9; 23)
        L_CURLY@[9; 10) "{"
        EXPR_STMT@[10; 22)
          FIELD_EXPR@[10; 21)
            IDENT_EXPR@[10; 11)
              NAME@[10; 11)
                IDENT@[10; 11) "a"
            DOT@[11; 12) "."
            FIELD_EXPR@[12; 21)
              IDENT_EXPR@[12; 13)
                NAME@[12; 13)
                  IDENT@[12; 13) "b"
              DOT@[13; 14) "."
              FIELD_EXPR@[14; 21)
                IDENT_EXPR@[14; 15)
                  NAME@[14; 15)
                    IDENT@[14; 15) "c"
                DOT@[15; 16) "."
                FIELD_EXPR@[16; 21)
                  IDENT_EXPR@[16; 17)
                    NAME@[16; 17)
                      IDENT@[16; 17) "d"
                  DOT@[17; 18) "."
                  CALL_EXPR@[18; 21)
                    IDENT_EXPR@[18; 19)
                      NAME@[18; 19)
                        IDENT@[18; 19) "e"
                    ARG_LIST@[19; 21)
                      L_PAREN@[19; 20) "("
                      R_PAREN@[20; 21) ")"
          SEMI@[21; 22) ";"
        R_CURLY@[22; 23) "}"

