parser/src/parser/expressions/snapshots/test__parser::expressions::ident::test::parse_generic_ident_expr.snap
---
created: "2020-03-26T15:48:56.947045Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/ident.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK_EXPR@[9; 20)
      BLOCK@[9; 20)
        L_CURLY@[9; 10) "{"
        EXPR_STMT@[10; 18)
          IDENT_EXPR@[10; 18)
            NAME@[10; 18)
              IDENT@[10; 11) "a"
              COLON_COLON@[11; 13) "::"
              TYPE_PARAM_LIST@[13; 18)
                L_ANGLE@[13; 14) "<"
                TYPE_PARAM@[14; 17)
                  IDENT_TYPE@[14; 17)
                    IDENT@[14; 17) "i32"
                R_ANGLE@[17; 18) ">"
        SEMI@[18; 19) ";"
        R_CURLY@[19; 20) "}"

