parser/src/parser/expressions/snapshots/test__parser::expressions::literal::test::parse_bool_literal.snap
---
created: "2020-05-02T10:11:44.332144Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/literal.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 23)
      BLOCK@[10; 23)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 16)
          LITERAL@[11; 15)
            TRUE_KW@[11; 15) "true"
          SEMI@[15; 16) ";"
        EXPR_STMT@[16; 22)
          LITERAL@[16; 21)
            FALSE_KW@[16; 21) "false"
          SEMI@[21; 22) ";"
        R_CURLY@[22; 23) "}"

